Before Table 2 test run